syntax = "proto3";

package xbasissvc.internal.user;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Message {

    rpc SendVerificationCode (SendRequest) returns (xbasis.commons.dto.Status);

}

message SendRequest {
    string to = 1;
    bool auth = 2;
    string code = 3;
    int64 messageType = 4;
}